Fixed alignment issues.

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   max-width: 470px;
   background: linear-gradient(135deg, #00feba, #5b548a);
   color: #fff;
-  margin: 100px auto 0;
+  margin: 50px auto 0;
   border-radius: 20px;
   padding: 40px 35px;
   text-align: center;
@@ -49,7 +49,7 @@ body {
 }
 .weather-icon {
   width: 170px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 .weather h1 {
   font-size: 80px;
@@ -58,14 +58,14 @@ body {
 .weather h2 {
   font-size: 45px;
   font-weight: 400;
-  margin-top: -10px;
+  margin-top: -5px;
 }
 .details {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
-  margin-top: 50px;
+  margin-top:40px;
 }
 .col {
   display: flex;
